Aleksei_Zaitsev/11.Kubernetes.Basic_objects/runner_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitlab-runner
  namespace: default
  labels:
    app: gitlab-runner
spec:
  containers:
  - name: gitlab-runner
    image: gitlab/gitlab-runner:latest
    command: ["/bin/bash", "/scripts/entrypoint.sh"]
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 500m
        memory: 512Mi
    volumeMounts:
    - name: scripts
      mountPath: /scripts
  volumes:
  - name: scripts
    configMap:
      name: gitlab-runner-config
      defaultMode: 0755
  restartPolicy: Always
